[DevTools] Bring back InspectorInstrumenetation::didHandleEvent

We should clear scheduled pause if event listener doesn't execute JavaScript or setTimeout expression contains syntax error otherwise JS execution will be paused in random place.

R=dgozman@chromium.org,pfeldman@chromium.org
BUG=603792

Review URL: https://codereview.chromium.org/1891113002

Cr-Commit-Position: refs/heads/master@{#387660}

Former-commit-id: 3f447ebc494e1c3c0296689ca978831044fef623